[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arva-sdk"
version = "0.1.0"
description = "A Python SDK for the Arva API"
readme = "README.md"
authors = [{name = "Oli Wales"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["arva", "sdk", "api"]
dependencies = [
    "requests",
    "requests-toolbelt",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Arva-AI/python-sdk"
